<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Email Popup</string>

    <!-- Notification -->

    <string name="notification_title">New Email</string>
    <string name="view_button_text">Open</string>
    <string name="delete_button_text">Delete</string>
    <string name="close_button_text">Close</string>

    <!-- Toast -->

    <string name="delete_email_confirmation_toast">Email %1$s: %2$s deleted</string>

    <string name="view_email_error_toast">Unable to open K-9 Mail. Do you have the latest version of K-9 Mail installed?</string>
    <string name="delete_email_error_toast">Unable to delete email. Do you have the latest version of K-9 Mail installed?</string>

    <!-- Preferences -->

    <!-- General Preferences -->

    <string name="general_pref_category">General</string>

    <string name="on_off_switch_preference">On/Off</string>
    <string name="on_switch_preference">Email Popup is \'On\'</string>
    <string name="off_switch_preference">Email Popup is \'Off\'</string>

    <!-- Filtering Preferences -->

    <string name="filtering_pref_category">Filtering</string>

    <string name="keyguard_filtering_preference_title">Keyguard Filtering</string>
    <string name="on_keyguard_preference">Only popup emails when the keyguard is on</string>
    <string name="off_keyguard_preference">Always popup emails</string>

    <string name="contact_filtering_preference_title">Contact Filtering</string>
    <string name="all_filtering_preference">Popup emails from all</string>
    <string name="contacts_only_filtering_preference">Only popup emails from phone contacts</string>
    <string name="starred_contacts_only_filtering_preference">Only popup emails from starred contacts</string>

    <!-- Display Preferences -->

    <string name="display_pref_category">Popup</string>

    <string name="time_display_preference_title">Display Time</string>
    <string name="time_display_preference_default">5</string>
    <string name="time_display_preference_summary_default">The popup will display for 5  sec.</string>
    <string name="time_display_preference_summary">Popup will display for %s sec.</string>

    <!--
    <string name="sound_display_preference_title">Sound</string>
    <string name="sound_display_preference_summary">Sound played when the popup is displayed</string>
	-->

    <!-- Security Preferences -->

    <string name="security_pref_category">Security</string>

    <string name="delete_button_security_pref_title">Delete Button</string>
    <string name="on_delete_button_security_preference">Allow email to be deleted from the popup notification</string>
    <string name="off_delete_button_security_preference">Email can not be deleted from the popup notification</string>

    <string name="keyguard_security_pref_title">Keyguard Unlock</string>
    <string name="on_keyguard_security_preference">Unlocking of the keyguard required after popup</string>
    <string name="off_keyguard_security_preference">Unlocking of the keyguard not required after popup</string>

    <!-- Misc. Preferences -->

    <string name="misc_pref_category">Misc.</string>

    <string name="about_pref_title">About</string>
    <string name="about_pref_summary">About Email Popup</string>
    <string name="about_text">Author: Bao-Long Nguyen-Trong\n
\n
Email Popup is an open source app that displays a dialog for a few seconds every time an email is received.
If the phone is sleeping and/or the screen locked,
Email Popup will wake up the phone and unlock the screen when displaying the popups.\n
\n
You can select how long the popup stays on.
You can also configure the app to filter out emails so that only the important ones do popup.\n
\n
Email Popup is great for\n
  . when you are working or studying with the phone on your desk\n
  . when driving with phone mounted on the car\'s dashboard\n
  . when in meetings\n
\n
Email Popup only works with K-9 Mail v1.106 and higher, http://code.google.com/p/k9mail\n
It does not work with Gmail unless you get your Gmail messages using K-9 Mail.\n
\n
For more info:\n
http://www.blntsoft.com/email-popup\n
\n
For comments and feedback, feel free to email me at email-popup@blntsoft.com\n
or file an issue here\n
https://github.com/baolongnt/EmailPopup/issues\n
\n
Check out the app blog for news:\n
http://www.blntsoft.com/category/email-popup\n
\n
The source code can be found on GitHub (pull requests are welcome!)\n
https://github.com/baolongnt/EmailPopup\n
\n
Icon Credits: Maury Boswell, http://www.mauryboswell.com\n
based on Simplicio http://www.smashingmagazine.com/2008/09/02/simplicio-a-free-icon-set\n
by Neurovit, http://neurovit.deviantart.com\n
via Smashing Magazine, http://www.smashingmagazine.com\n
</string>

</resources>

